force-app/main/default/objects/CP_Purchase_Order__c/CP_Purchase_Order__c.object-meta.xml
<CustomObject>
    <label>CP Purchase Order</label>
    <nameField>
        <displayFormat>CP PO-{000000}</displayFormat>
        <label>CP Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>