force-app/main/default/objects/CP_Purchase_Order__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>CP Purchase Orders</relationshipLabel>
    <relationshipName>CP_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>