force-app/main/default/objects/CP_Purchase_Order__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <label>Brokerage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>