force-app/main/default/objects/CP_Purchase_Order__c/fields/Brokerage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Amount__c</fullName>
    <formula>Booking__r.Quotation__r.Basic_Charge_Amount__c  *  Brokerage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>