force-app/main/default/objects/CP_Purchase_Order__c/fields/CP_Code__c.field-meta.xml
<CustomField>
    <fullName>CP_Code__c</fullName>
    <formula>Channel_Partner__r.CP_Unique_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Code</label>
    <type>Text</type>
</CustomField>