force-app/main/default/objects/CP_Purchase_Order__c/fields/CP_Incentive__c.field-meta.xml
<CustomField>
    <fullName>CP_Incentive__c</fullName>
    <label>CP Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>