force-app/main/default/objects/CP_Purchase_Order__c/fields/CP_Manager__c.field-meta.xml
<CustomField>
    <fullName>CP_Manager__c</fullName>
    <formula>CP_Project__r.Owner:User.FirstName + &quot; &quot; + CP_Project__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Manager</label>
    <type>Text</type>
</CustomField>