force-app/main/default/objects/CP_Purchase_Order__c/fields/CP_RERA_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_RERA_ID__c</fullName>
    <formula>Channel_Partner__r.MahaRERA_Registration_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP RERA ID</label>
    <type>Text</type>
</CustomField>