force-app/main/default/objects/CP_Purchase_Order__c/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <formula>Channel_Partner__r.GST_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST No.</label>
    <type>Text</type>
</CustomField>