force-app/main/default/objects/CP_Purchase_Order__c/fields/PAN_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_No__c</fullName>
    <formula>Channel_Partner__r.PAN_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAN No.</label>
    <type>Text</type>
</CustomField>