force-app/main/default/objects/CP_Purchase_Order__c/fields/PO_Remark__c.field-meta.xml
<CustomField>
    <fullName>PO_Remark__c</fullName>
    <label>PO Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>