force-app/main/default/objects/CP_Purchase_Order__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <formula>Booking__r.Registration_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Status</label>
    <type>Text</type>
</CustomField>